--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
     environment:
       POSTGRES_DB: hitoka
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: this password is a secret
+      POSTGRES_PASSWORD: 12345678
       PGDATA: /var/lib/postgresql/data/pgdata
