--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/cookie-parser": "^1.4.3",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/jquery": "^3.5.14",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/luxon": "^2.3.2",
         "@types/morgan": "^1.9.3",
@@ -49,7 +50,6 @@
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
-        "ejs": "^3.1.8",
         "express": "^4.18.1",
         "helmet": "^5.1.0",
         "http-status-codes": "^2.2.0",
