--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
         "eslint": "^8.15.0",
         "eslint-import-resolver-typescript": "^2.7.1",
         "eslint-plugin-import": "^2.26.0",
-        "rimraf": "^3.0.2",
-        "ts-node": "^10.7.0",
-        "typescript": "^4.6.4"
+        "ts-node": "^10.7.0"
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
@@ -60,7 +58,9 @@
         "ms": "^2.1.3",
         "pg": "^8.7.3",
         "reflect-metadata": "^0.1.13",
+        "rimraf": "^3.0.2",
         "typeorm": "^0.3.6",
+        "typescript": "^4.6.4",
         "winston": "^3.7.2",
         "winston-daily-rotate-file": "^4.6.1"
     },
