--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,4 @@ JWT_REFRESH_SECRET=
 JWT_ACCESS_EXPIRE=15m
 JWT_REFRESH_EXPIRE=30d
 
-DB_HOST=
-DB_PORT=5432
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DATABASE_URL=postgresql://[username]:[password]@localhost:5432/[database]
